[package]
authors = ["{{authors}}"]
edition = "2021"
readme = "README.md"
name = "{{project-name}}"
version = "0.1.0"

[dependencies]
cortex-m = { version = "0.7.6", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7"
cortex-m-semihosting = "0.5"
panic-halt = "1.0.0"
panic-rtt-target = "0.2.0"
rtt-target = "0.6.1"
switch-hal = "0.4.0"

# For the stm32f303vc mcu
[dependencies.stm32f3xx-hal]
features = ["stm32f303xc", "rt", "rtc"]
version = "0.10"

# this lets you use `cargo fix`!
[[bin]]
name = "{{project-name}}"
test = false
bench = false

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
